# my-ansible-linux-setup

./: .ansible-lint  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  DEVELOPMENT.md  Vagrantfile  Vagrantfile.old  ansible.cfg  justfile  playbook.example.yml  playbook.yml  production.yml  provision.yml  pyproject.toml  readme.md  requirements.txt  requirements.yml  ssh.example  tmp.txt  todo.md
.github/: copilot-instructions.md
.github/workflows/: lint.yml
archives/netdata/: compose.yml
group_vars/: all.yml  apt.yml  discord.yml  env.yml
host_vars/: all.example.yml  example.yml  thomassimonet.dev.yml
host_vars/staging/: all.yml
inventory/: production.yml  staging.example.yml  staging.yml
provisioning/: inventory  playbook.yml  requirements.yml  vagrant.yml
provisioning/group_vars/: all.yml  apt.yml  docker.yml
roles/apprise/tasks/: install.yml  main.yml  traefik.yml
roles/apprise/templates/: compose.yml.j2
roles/backrest/tasks/: install.yml  main.yml
roles/backrest/templates/: compose.yml.j2
roles/beszel/tasks/: install.yml  main.yml
roles/beszel/templates/: compose.yml.j2
roles/cloudflared/tasks/: install.yml  main.yml
roles/cloudflared/templates/: compose.yml.j2  config.yml.j2
roles/common/defaults/: main.yml
roles/common/handlers/: main.yml
roles/common/tasks/: datetime.yml  fail2ban.yml  iptables.yml  main.yml  packages.yml  ssh.yml  ufw.yml  user.yml
roles/common/templates/: fail2ban.local.conf.j2  ntp.conf.j2  sshd.conf.j2
roles/grafana/: readme.md
roles/mealie/: readme.md
(+210 files in other folders)
