[project]
name = "my-ansible-linux-setup"
version = "0.1.0"
description = "Docker-based homelab infrastructure using Ansible"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "ansible>=8.0.0",
]

[dependency-groups]
dev = [
    "ansible-lint>=25.9.2",
    "yamllint>=1.37.1", 
    "pre-commit>=4.0.0",
]
lint = [
    "ansible-lint>=25.9.2",
    "yamllint>=1.37.1",
]

[tool.uv]
default-groups = ["dev"]
